--- a/HW7/style.css
+++ b/HW7/style.css
@@ -54,3 +54,12 @@ td.cell {
 .disabled:hover {
     background: #7c7c7c;
 }
+#score {
+    width: 250px;
+    height: 50px;
+    background-color: aliceblue;
+    margin:auto;
+    text-align: center;
+    font-size: 20px;
+    
+}
